--- a/frontend/src/components/userComponents/AccountSettings.css
+++ b/frontend/src/components/userComponents/AccountSettings.css
@@ -1,20 +1,26 @@
-.settings-container{
+.settings-container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     max-width: 2000px;
+    min-height: 1300px;
     width: 100%;
     font-size: 1rem;
 }
-.settings-header{
+
+.settings-header {
     width: 60%;
 }
 
-.settings-container p{
-    font-size: 0.8rem;
+.settings-accountData {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 }
-.settings-form{
+
+.settings-formContainer {
     border: 2px solid #c2c2c2;
     border-radius: 10px;
     display: flex;
@@ -22,5 +28,78 @@
     align-items: center;
     flex-direction: column;
     width: 60%;
-    margin-bottom: 20px;
+    min-height: 400px;
+}
+
+.settings-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    min-height: 270px;
+}
+
+.settings-form-control {
+    display: flex;
+    flex-direction: column;
+}
+
+label.settings-form-control {
+    font-size: 45px;
+}
+
+input.settings-form-control {
+    width: 300px;
+    height: 30px;
+    border: 2px solid #c2c2c2;
+    border-radius: 10px;
+}
+
+.settings-button {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #1285d1;
+    color: white;
+    width: 300px;
+    height: 60px;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 10px;
+    border: none;
+}
+
+.settings-button:hover {
+    background-color: #136eaa;
+}
+
+.settings-errorMsg {
+    color: red;
+    font-size: 0.7rem;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+@media (max-width: 600px) {
+
+    .settings-header {
+        width: 100%;
+    }
+
+    .settings-container {
+        font-size: 0.7rem;
+    }
+    .settings-formContainer{
+        width: 90%;
+    }
+
+    input.settings-form-control {
+        width: 200px;
+    }
+
+    .settings-button {
+        height: 40px;
+        width: 200px;
+    }
+
 }
