--- a/frontend/src/components/loginComponents/LogIn.css
+++ b/frontend/src/components/loginComponents/LogIn.css
@@ -1,42 +1,40 @@
 @import url("../variable.css");
 
 .login-container{
-    max-width: 2000px;
-    display: flex;
     flex-direction: row;
-    width: 80%;
     justify-content: space-around;
     align-items: flex-start;
-    min-height: 600px;
-    font-size: 1rem;
 }
-.login-container h3{
+
+.login-container h1{
     font-size: 35px;
 }
-.login-login-container{
-    max-width: 2000px;
+
+.login-login-container, .login-login-content{
     display: flex;
     flex-direction: column;
     width: 100%;
-    justify-content: space-around;
-  
 }
+
+.login-login-container{
+    justify-content: space-around;
+}
+
 .login-login-content{
-    width: 80%;
-    display: flex;
-    flex-direction: column;
     justify-content: flex-start;
     align-items: center;
     border: 2px solid #c2c2c2;
     border-radius: 10px;
     margin-left: 30px;
 }
+
 .login-login-form{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     min-height: 270px;
 }
+
 .login-login-form button{
     margin-bottom: 25px;
     margin-top: 25px;
@@ -72,6 +70,7 @@ input.login-login-form-control{
 .login-button:hover{
     background-color: #136eaa;
 }
+
 .login-errorMsg{
     color: red;
     font-size: 0.7rem;
@@ -82,7 +81,7 @@ input.login-login-form-control{
 .login-register-container{
     display: flex;
     flex-direction: column;
-    width: 80%;
+    width: 100%;
     justify-content: flex-start;
     align-items: center;
     min-height: 300px;
@@ -93,16 +92,14 @@ input.login-login-form-control{
 @media (max-width: 1150px) {
     .login-container{
         flex-direction: column;
-        width: 100%;
     }
     .login-login-content{
         width: 100%;
-        margin-left: 0px;
+        margin-left: 0;
         border:none;
     }
     .login-register-container{
         margin-top: 30px;
-        width: 100%;
     }
 
 }
