--- a/frontend/src/components/loginComponents/Register.css
+++ b/frontend/src/components/loginComponents/Register.css
@@ -1,7 +1,9 @@
+@import url("../variable.css");
+
 .register-container-complete{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    min-height: 600px;
+    min-height: var(--min-height);
 }
