--- a/frontend/src/components/ordersComponents/OrderDetails.css
+++ b/frontend/src/components/ordersComponents/OrderDetails.css
@@ -1,39 +1,27 @@
-.orderdetails-container {
-    width: 100%;
-    max-width: 2000px;
+@import url("../variable.css");
+
+.orderdetails-details, .orderdetails-products, .orderdetails-amount {
     display: flex;
     flex-direction: column;
-    font-size: 1rem;
-}
-.orderdetails-details{
-    display: flex;
-    flex-direction: column; 
 }
 
-.orderdetails-products {
+.orderdetails-products-product, .orderdetails-products-product-left, .orderdetails-products-product-right {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    align-items: center;
 }
 
 .orderdetails-products-product {
-    display: flex;
-    flex-direction: row;
     justify-content: space-between;
-    border-top: 1px solid #E8E8E8;
-    border-bottom: 1px solid #E8E8E8;
+    border-top: 1px solid var(--border-color);
+    border-bottom: 1px solid var(--border-color);
 }
 
 .orderdetails-products-product-left {
     width: 60%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
 }
 
 .orderdetails-products-product-right {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
     justify-content: space-between;
     width: 30%;
 }
@@ -44,45 +32,48 @@
     height: 200px;
 }
 
-.orderdetails-amount{
+.orderdetails-amount {
     height: 100px;
-    display: flex;
-    flex-direction: column;
     align-items: flex-end;
     justify-content: space-between;
 }
-.orderdetails-amount li{
+
+.orderdetails-amount li {
     height: 100%;
     width: 400px;
     display: inline-flex;
-    align-items:  center;
+    align-items: center;
     justify-content: space-between;
     margin-bottom: 10px;
 }
-.orderdetails-amount li ul{
+
+.orderdetails-amount li ul {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
 }
 
+
 @media (max-width: 1200px) {
-    .orderdetails-container {
-        font-size: 0.8rem;
-    } 
     .orderdetails-products-product-img {
         width: 150px;
         height: 150px;
     }
-    
+
 }
+
 @media (max-width: 650px) {
     .orderdetails-container {
         font-size: 0.6rem;
-    } 
+    }
+
     .orderdetails-products-product-img {
         width: 75px;
         height: 75px;
     }
-    
+
+    .orderdetails-amount li{
+        width: 100%;
+    }
 }
