--- a/frontend/src/components/ordersComponents/OrderForm.css
+++ b/frontend/src/components/ordersComponents/OrderForm.css
@@ -1,34 +1,27 @@
+@import "../variable.css";
+
 .orderform-container {
-    display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: space-between;
-    max-width: 2000px;
-    width: 100%;
-    min-height: 600px;
-    font-size: 1rem;
 }
 
-
-.orderform-form-container {
-    width: 100%;
+.orderform-form-container,.orderform-delivery, .orderform-form-details,.orderform-cart-cart,.orderform-cart-container{
     display: flex;
     flex-direction: column;
+    width: 100%;
+}
+
+.orderform-form-container {
     justify-content: flex-start;
     align-items: flex-start;
 }
 
-
 .orderform-delivery {
-    display: flex;
-    flex-direction: column;
     justify-content: center;
 }
+
  .orderform-form-details{
-    display: flex;
-    flex-direction: column;
     justify-content: space-between;
-    width: 100%;
 }
 
 
@@ -72,22 +65,15 @@
     background-color: rgb(7, 153, 104);
 }
 
-
-.orderform-cart-cart {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
 .orderform-cart-container {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
     justify-content: space-between;
     align-items: center;
     border: 2px solid #c2c1c1;
     border-radius: 10px;
+}
+
+.orderform-cart-cart {
+    align-items: center;
 }
 
 .orderform-cart-product-link {
@@ -114,25 +100,17 @@
 }
 
 .orderform-placed-order{
-    display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    min-height: 600px;
-    max-width: 2000px;
-    width: 100%;
 }
 .orderform-placed-order span{
     margin-bottom: 40px;
 }
+
+
 @media (max-width: 850px) {
     .orderform-container {
         flex-direction: column;
-        font-size: 0.7rem;
-    }
-
-    .orderform-form-container {
-        width: 100%;
     }
 
     .orderform-cart-container {
