--- a/frontend/src/components/ordersComponents/OrderList.css
+++ b/frontend/src/components/ordersComponents/OrderList.css
@@ -1,66 +1,72 @@
-a{
+@import "../variable.css";
+
+a {
     text-decoration: none;
     color: black;
 }
-.userOrders-container {
-    width: 80%;
-    max-width: 2000px;
-    display: flex;
-    flex-direction: column;
-    font-size: 1rem;
-}
-.userOrders-filter{
+
+.userOrders-filter {
     width: 290px;
 }
-.userOrders-dropdownMenu{
+
+.userOrders-dropdownMenu {
     display: none;
 }
-.userOrders-dropdownMenu-activeButton{
+
+.userOrders-dropdownMenu-activeButton,
+.userOrders-order,
+.userOrders-order-products-product,
+.userOrders-order-products-img-container {
     display: flex;
     flex-direction: row;
 }
-.userOrders-dropdownMenu-label{
+
+.userOrders-dropdownMenu-activeButton span {
     margin-left: 10px;
     padding-left: 10px;
     border: 2px solid #e8e8e8;
     border-radius: 12px;
     width: 200px;
 }
-.userOrders-filter-button{
+
+.userOrders-filter-button {
     padding: 10px;
-    background-color: #136eaa;
+    background-color: #1975b4;
     color: white;
     border-radius: 10px;
     border: none;
     width: 120px;
+    margin-top: 15px;
 }
+
 .userOrders-order {
     width: 100%;
-    display: flex;
-    flex-direction: row;
     margin-bottom: 30px;
     border-style: solid;
     border-radius: 15px;
-    border-color: #e8e8e8;
+    border-color: var(--border-color);
 }
-.userOrders-order:hover{
-    box-shadow: 1px 1px 5px#cacaca;
+
+.userOrders-order:hover {
+    box-shadow: 1px 1px 5px #cacaca;
 }
 
 .userOrders-order-details {
-    background-color:rgb(245, 245, 245);
+    background-color: rgb(227, 227, 227);
     width: 100%;
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
     border-top-left-radius: 14px;
     border-bottom-left-radius: 14px;
-    border-color: #E8E8E8;
+    border-color: var(--border-color);
     flex-wrap: wrap;
 }
-.userOrders-order-details span{
+
+.userOrders-order-details span {
     margin-bottom: 15px;
 }
+
 .userOrders-order-products {
     width: 100%;
     display: flex;
@@ -70,46 +76,38 @@ a{
 
 .userOrders-order-products-product {
     width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start 20px;
+    justify-content: flex-start;
     align-items: center;
     margin-top: 7px;
     margin-bottom: 7px;
 }
-.userOrders-order-products-img-container{
+
+.userOrders-order-products-img-container {
     height: 100px;
     width: 100px;
-    display: flex;
-    flex-direction: row;
     align-items: center;
     justify-content: center;
 }
+
 .userOrders-order-products-img {
     max-width: 100px;
     max-height: 100px;
 }
 
 @media (max-width: 750px) {
-    .userOrders-container {
-        font-size: 0.7rem;
-    }
-    .userOrders-order-products-img{
+    .userOrders-order-products-img {
         max-width: 80px;
         max-height: 80px;
     }
 }
 
-
 @media (max-width: 500px) {
-    .userOrders-container {
-        font-size: 0.5rem;
-    }
-    .userOrders-order-products-img{
+    .userOrders-order-products-img {
         max-width: 60px;
         max-height: 60px;
     }
-    .userOrders-order-products-img-container{
+
+    .userOrders-order-products-img-container {
         height: 60px;
         width: 60px;
     }
