--- a/frontend/src/components/productsComponents/SearchProducts.css
+++ b/frontend/src/components/productsComponents/SearchProducts.css
@@ -169,9 +169,9 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background: rgba(49,49,49,0.8);
-    
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -188,10 +188,11 @@
     border-radius: 3px;
     max-width: 600px;
     min-width: 300px;
-    z-index: 1;
+    z-index: 999;
     display: flex;
     flex-direction: column;
 }
+
 .mobileFilter-content li{
     display: flex;
     flex-direction: column;
