--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -34,7 +34,21 @@ ul {
   list-style-type: none;
 }
 
+
+.page-content{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  max-width: var(--max-width);
+  min-height: var(--min-height);
+  font-size: 1rem;
+}
+
+
 @media (max-width: 1100px) {
+  .page-content{
+    font-size: 0.8rem;
+  }
   #root{
     margin-left:20px;
     margin-right: 20px;
@@ -45,5 +59,18 @@ ul {
   #root{
     margin-left:10px;
     margin-right: 10px;
+  }
+  .page-content{
+    font-size: 0.7rem;
+  }
+}
+
+@media (max-width: 500px) {
+  #root{
+    margin-left:10px;
+    margin-right: 10px;
+  }
+  .page-content{
+    font-size: 0.5rem;
   }
 }
